--- a/test/test.html.erb
+++ b/test/test.html.erb
@@ -9,108 +9,71 @@
   <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
   <script type="text/javascript" src="../lib/twitter-text.js"></script>
-  <script type="text/javascript" src="conformance/autolink.js"></script>
 	
 	<script type="text/javascript" charset="utf-8">
 	// <![CDATA[
-	var auto_link = function(text){
+
+	module("TwitterText AutoLink");
+	function auto_link(text) {
 	  return TwitterText.auto_link(text, { 'suppress_no_follow': true });
 	}
-	
-	var extract_mentions = function(text){
-	  return TwitterText.extract_mentioned_screen_names(text);
+	var autolink_tests = <%= @autolink_json %>;
+	for (var testName in autolink_tests.tests) {
+		(function (testName) {
+			test("testing autolink " + testName, function () {
+				var list = autolink_tests.tests[testName];
+				for (var i = 0; i < list.length; i += 1) {
+					var obj = list[i];
+					equals(auto_link(obj.text), obj.expected, obj.description);
+				}
+			});
+		}(testName));
 	}
 	
-	var extract_replies = function(text){
-	  return TwitterText.extract_reply_screen_name(text);
+	module("TwitterText Extract");
+	var extractFuncs = {
+		mentions: function (text) {
+			return TwitterText.extract_mentioned_screen_names(text);
+		},
+		replies: function (text) {
+			return TwitterText.extract_reply_screen_name(text);
+		},
+		urls: function (text) {
+			return TwitterText.extract_urls(text);
+		},
+		hashtags: function (text) {
+			return TwitterText.extract_hashtags(text);
+		}
+	};
+	var extract_tests = <%= @extract_json %>;
+	for (var testName in extract_tests.tests) {
+		(function (testName) {
+			test("testing extract " + testName, function () {
+				var list = extract_tests.tests[testName];
+				for (var i = 0; i < list.length; i += 1) {
+					var obj = list[i];
+					same(extractFuncs[testName](obj.text), obj.expected, obj.description);
+				}
+			});
+		}(testName));
 	}
 	
-	var extract_urls = function(text){
-	  return TwitterText.extract_urls(text);
+	module("TwitterText Hit Highlighting")
+	function hit_highlight(text, hits) {
+		return TwitterText.hit_highlight(text, hits);
 	}
-	
-	var extract_hashtags = function(text){
-	  return TwitterText.extract_hashtags(text);
+	var hit_highlighting_tests = <%= @hit_highlighting_json %>;
+	for (var testName in hit_highlighting_tests.tests) {
+		(function (testName) {
+			test("testing hit highlighting " + testName, function () {
+				var list = hit_highlighting_tests.tests[testName];
+				for (var i = 0; i < list.length; i += 1) {
+					var obj = list[i];
+					same(hit_highlight(obj.text, obj.hits), obj.expected, obj.description);
+				}
+			});
+		}(testName));
 	}
-	
-  module("Twitter AutoLink");
-  
-  var autolink_tests = <%= @autolink_json %>;
-  
-  var extract_tests = <%= @extract_json %>;
-  
-  test("testing all autolinking", function() {
-    var list = autolink_tests['tests']['all'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      equals( auto_link(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing autolink usernames", function() {
-    var list = autolink_tests['tests']['usernames'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      equals( auto_link(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing autolink lists", function() {
-    var list = autolink_tests['tests']['lists'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      equals( auto_link(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing autolink hashtags", function() {
-    var list = autolink_tests['tests']['hashtags'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      equals( auto_link(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing autolink urls", function() {
-    var list = autolink_tests['tests']['urls'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      equals( auto_link(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing extracting mentions", function() {
-    var list = extract_tests['tests']['mentions'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      same( extract_mentions(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing extracting replies", function() {
-    var list = extract_tests['tests']['replies'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      same( extract_replies(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing extracting urls", function() {
-    var list = extract_tests['tests']['urls'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      same( extract_urls(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-  
-  test("testing extracting hashtags", function() {
-    var list = extract_tests['tests']['hashtags'];
-    for (var i=0; i < list.length; i++) {
-      var obj = list[i];
-      same( extract_hashtags(obj['text']), obj['expected'], obj['description'] );
-    };
-  });
-
 	// ]]>
 	</script>
 	<!-- Date: 2010-04-23 -->
